Added basic functionality to DAT.  Did some clean up.

--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,13 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
-    
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+
     implementation 'org.apache.httpcomponents:httpclient:4.5'
-	implementation 'commons-net:commons-net:3.6'
-	implementation 'org.snmp4j:snmp4j:3.7.5'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc3'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.14.0-rc3'
-    
+    implementation 'commons-net:commons-net:3.6'
+    implementation 'org.snmp4j:snmp4j:3.7.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc3'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.14.0-rc3'
+    implementation 'org.codehaus.groovy:groovy:3.0.16'
 }
 
 tasks.named('test') {
